# AlignTune-VLTransformer

./: .gitignore  README.md  check.py  generated_best_captions.csv  generated_captions.csv  pyproject.toml
aligntune/: __main__.py  train.ipynb
aligntune/data/: check_train_val.py  clean_data.py  loader.py  sampler.py
aligntune/data/RISCM/: captions_cleaned.csv
aligntune/notebooks/: data_visualization.ipynb
aligntune/src/: __init__.py  inference.py  module.py  train.py  train_2.py
aligntune/src/nn/: gemma.py  inference.py  processor_inference.py  siglip.py
aligntune/utils/: load_model.py  processor.py
aligntune_vltransformer/src/: __init__.py
aligntune_vltransformer/src/nn/: inference.py
